Some functionalities added
Work on model and frontend can be started now.

--- a/public_html/update.html
+++ b/public_html/update.html
@@ -230,7 +230,7 @@
             $('#phone').val(data[0].phone);
             $('#email').val(data[0].email);
             $('#age').val(data[0].age);
-            $("#address").val(data[0].address),
+            $("#address").val(data[0].address);
             $('#box').html("");
 
         });
