--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,6 +37,20 @@
     <div class="col-sm-3">
     </div>
 </div>
+<br><br>
+<div class="row">
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-4 btn-danger "  style="box-shadow: 8px 8px 5px black">
+        <h2  align="center" id="3" style="font-family: Serif">
+            <a href="survey.html">SURVEY</a>
+        </h2>
+    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-3">
+    </div>
+</div>
 <script>
 
 
