Reorganization of the project.
Deleted useless files and templates. Arranged files in a more organized way.

--- a/public_html/logged.html
+++ b/public_html/logged.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>Profile</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -233,9 +232,8 @@
     </div>
 
 
-</div>
 
-<script src="jquery.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
 <script>
 
