--- a/public_html/update.html
+++ b/public_html/update.html
@@ -6,91 +6,11 @@
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-<script src="jquery.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
 <style>
 
-    .navbar-default
-    {
-        background-color: purple;
-        border-color: rebeccapurple;
-    }
-    .navbar-default .navbar-brand {
-        color: #ecf0f1;
-        font-size: 1.3em;
-    }
-    .navbar-default .navbar-brand:hover,
-    .navbar-default .navbar-brand:focus {
-        font-size: 1.3em;
-        color: #ffbbbc;
-    }
-    .navbar-default .navbar-text {
-        color: #ecf0f1;
-        font-size: 1.3em;
-    }
-    .navbar-default .navbar-nav > li > a {
-        color: #ecf0f1;
-        font-size: 1.3em;
-    }
-    .navbar-default .navbar-nav > li > a:hover,
-    .navbar-default .navbar-nav > li > a:focus {
-        color: #ffbbbc;
-        font-size: 1.3em;
-    }
-    .navbar-default .navbar-nav > .active > a,
-    .navbar-default .navbar-nav > .active > a:hover,
-    .navbar-default .navbar-nav > .active > a:focus {
-        color: #ffbbbc;
-        font-size: 1.3em;
-        background-color: #c02b94;
-    }
-    .navbar-default .navbar-nav > .open > a,
-    .navbar-default .navbar-nav > .open > a:hover,
-    .navbar-default .navbar-nav > .open > a:focus {
-        color: #ffbbbc;
-        font-size: 1.3em;
-        background-color: #c02b94;
-    }
-    .navbar-default .navbar-toggle {
-        border-color: #c02b94;
-    }
-    .navbar-default .navbar-toggle:hover,
-    .navbar-default .navbar-toggle:focus {
-        background-color: #c02b94;
-    }
-    .navbar-default .navbar-toggle .icon-bar {
-        background-color: #ecf0f1;
-    }
-    .navbar-default .navbar-collapse,
-    .navbar-default .navbar-form {
-        border-color: #ecf0f1;
-    }
-    .navbar-default .navbar-link {
-        font-size: 1.3em;
-        color: #ecf0f1;
-    }
-    .navbar-default .navbar-link:hover {
-        color: #ffbbbc;
-        font-size: 1.3em;
-    }
 
-
-    @media (max-width: 767px) {
-
-        .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-            color: #ecf0f1;
-        }
-        .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-        .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-            color: #ffbbbc;
-        }
-        .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-        .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-        .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-            color: #ffbbbc;
-            background-color: #c02b94;
-        }
-    }
 
     .col-sm-6
     {
