--- a/public_html/update_password.html
+++ b/public_html/update_password.html
@@ -6,7 +6,7 @@
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-<script src="jquery.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
 
 
