--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,23 +16,14 @@
         </style>
     </head>
     <body>
-        <div class="container">
 
-            <div class="jumbotron text-center">
-                <h1>
-                    <span class="fa fa-lock"></span>
-                </h1>
+    Career Compass
 
-                <p>Login or Register with:</p>
-
-                <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-                <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
-                <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-                <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
-                <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
-            </div>
-
-
-        </div>
+    <a href="/login">login</a>
+    <br>
+    <a href="/survey">Survey</a>
+    <br>
+    <a href="/signup">Sign up</a>
+    <br>
     </body>
 </html>
